hphp/hack/test/typecheck/array/disallow_zero_type_parameters_for_varray.php.exp
File "disallow_zero_type_parameters_for_varray.php", line 3, characters 18-23:
Too few type arguments for this type (Naming[2071])
