hphp/hack/test/typecheck/array/disallow_zero_type_parameters_for_varray.php
<?hh

function test(): varray {
  return vec[0, 1, 2];
}
